# RI1-HYBRID-ENGINE

./: README.md
ri1-hybrid-engine/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
ri1-hybrid-engine/.github/workflows/: ci.yml
ri1-hybrid-engine/assets/: README.md
ri1-hybrid-engine/crates/ri1-audio/: Cargo.toml
ri1-hybrid-engine/crates/ri1-cli/: Cargo.toml
ri1-hybrid-engine/crates/ri1-cli/src/: main.rs
ri1-hybrid-engine/crates/ri1-cli/tests/fixtures/: envelope_coop.json
ri1-hybrid-engine/crates/ri1-code/: Cargo.toml
ri1-hybrid-engine/crates/ri1-core/: Cargo.toml
ri1-hybrid-engine/crates/ri1-core/src/: constraints.rs  lib.rs  modality.rs  orchestrator.rs
ri1-hybrid-engine/crates/ri1-image/: Cargo.toml
ri1-hybrid-engine/crates/ri1-signal/: Cargo.toml
ri1-hybrid-engine/crates/ri1-symbolic/: Cargo.toml
ri1-hybrid-engine/crates/ri1-symbolic-meta/: Cargo.toml
ri1-hybrid-engine/crates/ri1-symbolic-meta/src/: influence.rs  lib.rs  meta_constraints.rs
ri1-hybrid-engine/crates/ri1-symbolic-meta/src/interaction/: mod.rs  rules.rs  tokenize.rs  validate.rs
ri1-hybrid-engine/crates/ri1-symbolic-meta/tests/: golden_snapshots.rs  influence_negotiation_edges.rs  influence_tests.rs
ri1-hybrid-engine/crates/ri1-symbolic/src/: lib.rs
ri1-hybrid-engine/crates/ri1-text/: Cargo.toml
ri1-hybrid-engine/docs/: phase-0.md  phase-1.md
ri1-hybrid-engine/docs/spec/: governance-consent.md  meta-architecture.md  phipe-spec.md  primus-spec.md
ri1-hybrid-engine/logs/: phase2-smoke.txt  run-1.json  run-influence.json  sample.json  verbose.json
(+1 files in other folders)
